--- a/vCare/vCare.csproj
+++ b/vCare/vCare.csproj
@@ -92,6 +92,7 @@
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\CareProvider\main.js" />
     <Content Include="Scripts\CareProvider\main1.js" />
+    <Content Include="Scripts\CareProvider\main2.js" />
     <Content Include="Scripts\CareRecepient\main.js" />
     <Content Include="Scripts\CareRecepient\main1.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
